<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>sble-parent</groupId>
	<artifactId>sble-parent</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>
	<modules>
		<module>learnenglish</module>
		<module>learn-account</module>
		<module>sble-base-common</module>
		<module>learn-webservice</module>
		<module>sble-mq</module>
	</modules>

	<properties>
		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
		<maven.compiler.plugin.version>3.0</maven.compiler.plugin.version>
		<java.version>1.7</java.version>
		<spring.version>4.2.1.RELEASE</spring.version>
		<logback.version>1.1.3</logback.version>
		<servlet.version>3.1.0</servlet.version>
		<jackson.version>2.6.2</jackson.version>
		<gson.version>2.3.1</gson.version>
		<mybatis.spring.version>1.2.3</mybatis.spring.version>
		<mybatis.version>3.3.0</mybatis.version>
		<mysql.version>5.1.36</mysql.version>
		<freemarker.version>2.3.23</freemarker.version>
	</properties>
	<!-- 配置远程发布到私服，mvn deploy -->
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>ch.qos.logback</groupId>
				<artifactId>logback-classic</artifactId>
				<version>${logback.version}</version>
			</dependency>
			<dependency>
				<groupId>javax.servlet</groupId>
				<artifactId>javax.servlet-api</artifactId>
				<version>${servlet.version}</version>
			</dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>${jackson.version}</version>
			</dependency>
			<dependency>
				<groupId>com.google.code.gson</groupId>
				<artifactId>gson</artifactId>
				<version>${gson.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis-spring</artifactId>
				<version>${mybatis.spring.version}</version>
			</dependency>
			<dependency>
				<groupId>org.mybatis</groupId>
				<artifactId>mybatis</artifactId>
				<version>${mybatis.version}</version>
			</dependency>
			<dependency>
				<groupId>mysql</groupId>
				<artifactId>mysql-connector-java</artifactId>
				<version>${mysql.version}</version>
			</dependency>
			<dependency>
				<groupId>org.freemarker</groupId>
				<artifactId>freemarker</artifactId>
				<version>${freemarker.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<build>
		<!--finalName>${project.artifactId}</finalName -->
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven.compiler.plugin.version}</version>
					<configuration>
						<encoding>${maven.compiler.encoding}</encoding>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=1024m
							-Dfile.encoding=UTF-8</argLine>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>